Adds dynamic pagination for two categories title and author + 2 new exceptions